[package]
name = "bert_tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
qdrant-client = "1.6.0"
rust-bert = { git="https://github.com/33671/rust-bert" }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
tonic = "0.10.2"
